# multi-vehicle-formation-system

./: .gitignore  LICENSE  README.md  formation_simulation_standalone.py  github_upload_guide.md  requirements.txt  run_formation_demo.py
docs/: algorithm_design.md  ignition_gazebo_guide.md  parameter_tuning.md
embedded_system/Core/Inc/: formation_algorithm_embedded.h
ros2_workspace/src/multi_vehicle_formation/: CMakeLists.txt  package.xml
ros2_workspace/src/multi_vehicle_formation/config/: formation_params.yaml  gz_bridge.yaml
ros2_workspace/src/multi_vehicle_formation/include/: formation_algorithm.hpp
ros2_workspace/src/multi_vehicle_formation/launch/: simulation.launch.py
ros2_workspace/src/multi_vehicle_formation/worlds/: formation_world.sdf
scripts/: build_and_run_ignition.sh  run_simulation.sh  setup_environment.sh
simulation_tools/python_tools/: formation_simulator.py
