<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_vehicle_formation</name>
  <version>1.0.0</version>
  <description>多车编队跟随与队形变换仿真系统</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <author>Your Name</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Navigation and control -->
  <depend>nav2_msgs</depend>
  <depend>navigation2</depend>
  <depend>control_msgs</depend>
  
  <!-- Ignition Gazebo simulation -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_interfaces</depend>
  
  <!-- Eigen for linear algebra -->
  <depend>eigen3_cmake_module</depend>
  
  <!-- Custom message dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 